--- a/app/frontend/spagnesi/template/ecommerce/scelta-variante.twig
+++ b/app/frontend/spagnesi/template/ecommerce/scelta-variante.twig
@@ -3,7 +3,7 @@
 
                 <div class="col-12 p-5">
 
-                    <h2>Scegli rivestimento e colore</h2>
+                    <h2>Scegli il colore</h2>
                     {% for combinazione in combinazioni %}
                         <form method="post" action="/carrello/aggiungi" data-index="{{ loop.index-1 }}">
                             <input type="hidden" name="id_variante" value="{{ variante.id }}" >
@@ -15,7 +15,7 @@
                     {% endfor %}
                     
                     {% for combinazione in combinazioni %}
-                            <label class="label-scelta-variante">
+                            <label class="label-scelta-variante" data-index="{{ loop.index-1 }}">
                                 <img src="/media/tessuti/{% for valore in combinazione %}attr{{ valore.id_ecommerce_attributo }}_val{{ valore.id }}{% endfor %}.jpg">
                                 <span>{% for valore in combinazione %}{{ valore.valore }} {% endfor %}</span>
 
