--- a/app/frontend/spagnesi/template/ecommerce/scheda-prodotto-spagnesi.twig
+++ b/app/frontend/spagnesi/template/ecommerce/scheda-prodotto-spagnesi.twig
@@ -77,7 +77,7 @@
 
                                         <div class="row">
                                             <div class="col-2">
-                                                <img src="{{ versione.schematics.nome_file }}">
+                                                <img src="/media/schematics/{{ versione.schematics.nome_file }}">
                                             </div>
 
 
