--- a/app/backend/template/base.twig
+++ b/app/backend/template/base.twig
@@ -77,6 +77,7 @@
     <script src="/backend/assets/js/main.js"></script>
     <script src="/backend/assets/js/image.js"></script>
 
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 
 </head>
 <body>
@@ -138,6 +139,7 @@
             $('#bootstrap-data-table-export').DataTable();
         } );
     })(jQuery);
+
 
 </script>
 
