--- a/app/backend/assets/css/custom.css
+++ b/app/backend/assets/css/custom.css
@@ -87,13 +87,29 @@ form.loading [type="submit"]:before{
     width: auto;
     height:auto;
 }
+.header-left .form-inline {
+    display: inline-block;
+    opacity: 0;
+    position: absolute;
+    pointer-events: none;
+}
 .header-left.open .form-inline {
     display: inline-block;
+    opacity: 1;
+    position: relative;
+    pointer-events: auto;
+
 }
 header .form-inline .search-form input[type="text"]{
-    background: #eee;
-    padding: 10px 10px 10px 59px;
-
+    background: #fff;
+    padding: 6px 6px 6px 30px;
+    border-radius: 25px;
+    width: 0px;
+    transition: all 300ms;
+}
+.header-left.open .form-inline .search-form input[type="text"]{
+    padding: 6px 6px 6px 40px;
+    width: 200px;
 }
 header .form-inline .search-form{
     height:auto;
@@ -107,12 +123,43 @@ header .form-inline .search-form button{
 }
 aside.left-panel{
     background: #202020;
+    background: #e8e9e7;
+    background: #f5f5f5;
+    border-right: 1px solid #d8d8d8;
+    width: 220px;
+    padding:0;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.05);
+}
+.navbar .navbar-nav li.menu-item-has-children a:hover:before{
+    color: inherit;
+}
+.left-panel .nav li{
+    padding:0 20px;
+    border-bottom: 1px solid rgba(0,0,0,0.05);
 }
 
+.left-panel .nav li:hover,.menu-item-has-children.dropdown.open{
+    padding:0 20px;
+    border-bottom: 1px solid rgba(0,0,0,0.05);
+    background: rgba(0,0,0,0.03);
+}
+
+.navbar .navbar-nav > .active > a, .navbar .navbar-nav > .active > a:focus, .navbar .navbar-nav > .active > a:hover ,.navbar .navbar-nav li > a{
+    color: #333!important;
+}
 .navbar .navbar-nav li > a{
     font-family: 'Roboto', sans-serif;
 }
 
+.navbar .menu-title{
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    color: #333;
+    padding-left: 25px;
+}
+
+.navbar .navbar-nav li > a:hover, .navbar .navbar-nav li > a:hover .menu-icon{
+    color: #000!important;
+}
 .navbar .navbar-nav li > a .menu-icon {
     color: inherit;
     float: left;
@@ -191,7 +238,9 @@ aside.left-panel{
 .open aside.left-panel .navbar .navbar-nav li.menu-item-has-children .sub-menu {
     right: -170px;
     border: none;
+
     background: #202020;
+
 }
 .open aside.left-panel .navbar .navbar-brand.hidden {
     display: flex !important;
@@ -231,6 +280,11 @@ aside.left-panel{
 
 .card {
     border-radius: 0.3rem;
+
+    display: inline-flex;
+    flex: 1;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
+    flex-basis: 500px;
 }
 
 .btn-icon{
@@ -247,10 +301,11 @@ aside.left-panel{
     justify-self: center;
     width: 100%;
 }
-/*
+
 .card-body-table{
   max-width: 100%;
-}*/
+    padding:0;
+}
 
 .btn-xs{
     font-size: .8em;
@@ -439,18 +494,109 @@ aside.left-panel{
     margin-bottom: 1rem;
     padding: 1em;
     border-radius:5px;
+    display: flex;
 }
 
 .form-group:hover{
     background: #fafafa;
 }
 .form-group:focus-within{
-    background: #eee;
+    background: #efefef;
     box-shadow: 0px 5px 10px rgba(0,0,0,0.05), 0px 0px 0px 1px rgba(0,0,0,0.1);
 }
 .form-group label {
     font-weight: bold;
+    display: flex;
+    /* flex: 1; */
+    margin-right: 20px;
+    width: 100px;
+    text-transform: capitalize;
 }
 .input-group{
     background: #fff;
+    display: flex;
+    flex: 1;
+}
+
+
+.right-panel header.header{
+    background: #393939;
+}
+
+.search-trigger,.header-left .dropdown .dropdown-toggle{
+    color: #fff;
+}
+
+
+@media (max-width: 900px) {
+    .navbar .navbar-brand{
+        margin-top: 4px!important;
+        min-height: inherit;
+        width: 40px;
+        padding: 0;
+        height: 30px;
+        background: transparent;
+        margin-left: 8px;
+    }
+    aside.left-panel{
+        width:100%;
+        position: sticky;
+        position: -webkit-sticky;
+        top: 0;
+    }
+}
+
+.header-left .dropdown .dropdown-menu{
+    top: 46px !important;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+    padding: 0;
+    background: #fcfcfc;
+
+}
+.header-left .dropdown .dropdown-menu header{
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+    background: #fff;
+    position: sticky;
+    top: 0;
+    padding: 5px;
+
+}
+.header-left .dropdown .dropdown-menu header:before{
+    content: "";
+    border: 10px solid transparent;
+    border-bottom: 5px solid #fff;
+    position: absolute;
+    bottom: 100%;
+    left: 15px;
+}
+.header-left .dropdown .dropdown-menu .dropdown-item{
+    border-bottom: 1px solid #fafafa;
+}
+.header-left .dropdown .dropdown-menu .dropdown-item:hover{
+    background: rgba(0,0,0,0.05);
+}
+.for-notification .dropdown-menu {
+    width: 20em;
+    height: 20em;
+}
+.for-notification .dropdown-menu .dropdown-item p{
+    font-size: 12px;
+
+
+}
+
+.left-panel .nav li.active{
+    border-left: 5px solid #e16c08;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: rgba(0,0,0,.01);
+}
+.table td, .table th {
+    padding: 1rem;
+}
+
+.table-striped tbody tr:hover {
+    background-color: #ffe4c2;
 }
