--- a/app/backend/template/parts/header.twig
+++ b/app/backend/template/parts/header.twig
@@ -6,7 +6,7 @@
         <div class="col-sm-7">
             <a id="menuToggle" class="menutoggle pull-left"><i class="fa fa fa-tasks"></i></a>
             <div class="header-left">
-                <button class="search-trigger"><i class="fa fa-search"></i></button>
+                <button class="search-trigger"><i class="lnr lnr-magnifier"></i></button>
                 <div class="form-inline">
                     <form class="search-form">
                         <input class="form-control mr-sm-2" type="text" placeholder="Search ..." aria-label="Search">
@@ -16,23 +16,18 @@
 
                 <div class="dropdown for-notification">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="notification" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-bell"></i>
-                        <span class="count bg-danger">5</span>
+                        <i class="lnr lnr-alarm"></i>
+                        <span class="count bg-danger">{{ notifications | length }}</span>
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="notification">
-                        <p class="red">You have 3 Notification</p>
-                        <a class="dropdown-item media bg-flat-color-1" href="#">
-                            <i class="fa fa-check"></i>
-                            <p>Server #1 overloaded.</p>
-                        </a>
-                        <a class="dropdown-item media bg-flat-color-4" href="#">
-                            <i class="fa fa-info"></i>
-                            <p>Server #2 overloaded.</p>
-                        </a>
-                        <a class="dropdown-item media bg-flat-color-5" href="#">
-                            <i class="fa fa-warning"></i>
-                            <p>Server #3 overloaded.</p>
-                        </a>
+                    <div class="dropdown-menu notification-dropdown" aria-labelledby="notification">
+                        <header  >Ci sono {{ notifications | length }} notifiche non lette</header>
+
+                        {% for notification in notifications %}
+                            <a class="dropdown-item" href="#">
+                                <i class="fa fa-check"></i>
+                                <p>{{ notification.message }}</p>
+                            </a>
+                        {% endfor %}
                     </div>
                 </div>
 
@@ -40,7 +35,7 @@
                     <button class="btn btn-secondary dropdown-toggle" type="button"
                             id="message"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="ti-email"></i>
+                        <i class="lnr lnr-envelope"></i>
                         <span class="count bg-primary">9</span>
                     </button>
                     <div class="dropdown-menu" aria-labelledby="message">
@@ -91,7 +86,7 @@
                 <div class="user-menu dropdown-menu">
                     <a class="nav-link" href="#"><i class="fa fa- user"></i>My Profile</a>
 
-                    <a class="nav-link" href="#"><i class="fa fa- user"></i>Notifications <span class="count">13</span></a>
+                    <a class="nav-link" href="#"><i class="fa fa- user"></i>Notifications <span class="count">{{ notifications | length }}</span></a>
 
                     <a class="nav-link" href="#"><i class="fa fa -cog"></i>Settings</a>
 
