--- a/app/backend/template/parts/left-panel.twig
+++ b/app/backend/template/parts/left-panel.twig
@@ -19,15 +19,15 @@
 
             <ul class="nav navbar-nav">
                 <li class="active">
-                    <a href="/backend/main/"> <i class="menu-icon fa fa-chart-line"></i>Dashboard </a>
+                    <a href="/backend/main/"> <i class="menu-icon lnr lnr-file-empty"></i>Dashboard </a>
                 </li>
                 <h3 class="menu-title">Gestione contenuti</h3>
 
                 {% for m in menu.gestionecontenuti %}
 
 
-                    <li class="menu-item-has-children dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-{{ m.icon?m.icon : "laptop" }}"></i>{{ m.label }}</a>
+                    <li class="menu-item-has-children dropdown" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon lnr lnr-{{ m.icon?m.icon : "laptop" }}"></i>{{ m.label }}</a>
                         {% if m.children %}
                         <ul class="sub-menu children dropdown-menu">
                             {% for children in m.children %}
