--- a/app/backend/template/fields/slug.twig
+++ b/app/backend/template/fields/slug.twig
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for="company" class=" form-control-label small">{{ field.label ? field.label : property }}</label>
+    <label for="company" class=" form-control-label">{{ field.label ? field.label : property }}<small>{{ field.hint }}</small></label>
 
     <div class="input-group">
         <div class="input-group-prepend">
