avanti prod, messo stripe

--- a/app/applications/ecommerce/templates/frontend/product/thumbnail-preview.twig
+++ b/app/applications/ecommerce/templates/frontend/product/thumbnail-preview.twig
@@ -42,9 +42,11 @@
 
     <div class="badges">
 
+        {% if prodotto.variantePrimaria.calculatePrice.sconto > 0  %}
         <div class="sconto">
             <span>-{{ prodotto.variantePrimaria.calculatePrice().sconto_perc}}%</span>
         </div>
+        {% endif %}
 
     </div>
 </article>
