cambi core echidna

--- a/app/backend/assets/css/custom.css
+++ b/app/backend/assets/css/custom.css
@@ -706,12 +706,16 @@ body{
     border-bottom: 1px solid #ddd;
 }
 .profile-picture{
-    background: #000;
+    background-color: #000;
     border-radius: 100%;
     width: 7em;
     height:7em;
     margin:0 auto;
     position: relative;
+
+    background-size: cover;
+    background-position: 50% 50%;
+
 }
 .profile-name{
     font-size:1.5em;
@@ -783,4 +787,14 @@ body{
     font-weight:bold;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
 
+}
+
+.info-popup .dropdown-menu{
+    top: -2px !important;
+    width: 300px;
+    height:300px;
+    max-width: 100vw;
+    right:-2px;
+    left:auto !important;
+    box-shadow: 0px 5px 20px rgba(0,0,0,0.2);
 }
