--- a/app/backend/template/mod.twig
+++ b/app/backend/template/mod.twig
@@ -32,7 +32,7 @@
         {% endfor %}
 
 
-             {% block additionalFields %}{% endblock %}
+             {% block additionalFields %}{{ additional_fields|raw }}{% endblock %}
 
 
 
