--- a/app/backend/template/base.twig
+++ b/app/backend/template/base.twig
@@ -79,6 +79,10 @@
 
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
+
 </head>
 <body>
 
@@ -184,6 +188,9 @@
         $(document).ready(function() {
             $('#bootstrap-data-table-export').DataTable();
         } );
+
+
+        $(".datapicker").datepicker();
     })(jQuery);
 
 
